--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-vue-typescript-starter",
+  "name": "demo-playwright-currency-input",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.38",
     "vee-validate": "^4.12.5",
+    "vue": "^3.4.38",
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
+    "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
